// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The MobileAppsRendering stack matches the snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuEc2App",
      "GuCertificate",
      "GuInstanceRole",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuDistributionBucketParameter",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuWazuhAccess",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
      "GuSecurityGroup",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": Object {
    "LoadBalancerMobileappsrenderingDnsName": Object {
      "Description": "DNS entry for LoadBalancerMobileappsrendering",
      "Value": Object {
        "Fn::GetAtt": Array [
          "LoadBalancerMobileappsrenderingB8B00ACB",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": Object {
    "AMIMobileappsrendering": Object {
      "Description": "Amazon Machine Image ID for the app mobile-apps-rendering. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "DistributionBucketName": Object {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "LoggingStreamName": Object {
      "Default": "/account/services/logging.stream.name",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/account/services/artifact.bucket",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "VpcId": Object {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "mobileappsrenderingPrivateSubnets": Object {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "mobileappsrenderingPublicSubnets": Object {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": Object {
    "AutoScalingGroupMobileappsrenderingASG42891F00": Object {
      "Properties": Object {
        "HealthCheckGracePeriod": 120,
        "HealthCheckType": "ELB",
        "LaunchTemplate": Object {
          "LaunchTemplateId": Object {
            "Ref": "mobileTESTmobileappsrenderingAD91FF83",
          },
          "Version": Object {
            "Fn::GetAtt": Array [
              "mobileTESTmobileappsrenderingAD91FF83",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "2",
        "MinSize": "1",
        "Tags": Array [
          Object {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": Object {
              "Ref": "LoggingStreamName",
            },
          },
          Object {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
        ],
        "TargetGroupARNs": Array [
          Object {
            "Ref": "TargetGroupMobileappsrendering29320E35",
          },
        ],
        "VPCZoneIdentifier": Object {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "AutoScalingGroupMobileappsrenderingScalingPolicyCpuScalingPolicy25F424F1": Object {
      "Properties": Object {
        "AutoScalingGroupName": Object {
          "Ref": "AutoScalingGroupMobileappsrenderingASG42891F00",
        },
        "PolicyType": "TargetTrackingScaling",
        "TargetTrackingConfiguration": Object {
          "PredefinedMetricSpecification": Object {
            "PredefinedMetricType": "ASGAverageCPUUtilization",
          },
          "TargetValue": 10,
        },
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "CertificateMobileappsrendering85649D08": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "DomainName": "mobile-rendering.mobile-aws.code.dev-guardianapis.com",
        "DomainValidationOptions": Array [
          Object {
            "DomainName": "mobile-rendering.mobile-aws.code.dev-guardianapis.com",
            "HostedZoneId": "TEST-HOSTED-ZONE-ID",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Name",
            "Value": "MobileAppsRendering/CertificateMobileappsrendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "DescribeEC2PolicyFF5F9295": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": Object {
      "Properties": Object {
        "HostedZoneId": "TEST-HOSTED-ZONE-ID",
        "Name": "mobile-rendering.mobile-aws.code.dev-guardianapis.com.",
        "ResourceRecords": Array [
          Object {
            "Fn::GetAtt": Array [
              "LoadBalancerMobileappsrenderingB8B00ACB",
              "DNSName",
            ],
          },
        ],
        "TTL": "3600",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "GetDistributablePolicyMobileappsrendering8E649036": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:s3:::",
                    Object {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile/TEST/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyMobileappsrendering8E649036",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetParametersByPath37B32C62": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetParametersByPath37B32C62",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupMobileappsrendering089F1660": Object {
      "Properties": Object {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingInternalIngressSecurityGroupMobileappsrenderingB407C3A230407E6A596B": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingLoadBalancerMobileappsrenderingSecurityGroupE0CCF7183040505B735B": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:kinesis:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    Object {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleMobileappsrenderingEC64402A": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Path": "/",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InternalIngressSecurityGroupMobileappsrendering486B411A": Object {
      "Properties": Object {
        "GroupDescription": "Allow restricted ingress from CIDR ranges",
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": "10.0.0.0/8",
            "Description": "Allow access on port 443 from 10.0.0.0/8",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingGuHttpsEgressSecurityGroupMobileappsrenderingC4F35269304093993953": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingWazuhSecurityGroupB96243E1304031807BEA": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ListenerMobileappsrendering47F84352": Object {
      "Properties": Object {
        "Certificates": Array [
          Object {
            "CertificateArn": Object {
              "Ref": "CertificateMobileappsrendering85649D08",
            },
          },
        ],
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "TargetGroupMobileappsrendering29320E35",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "LoadBalancerMobileappsrenderingB8B00ACB",
        },
        "Port": 443,
        "Protocol": "HTTPS",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerMobileappsrenderingB8B00ACB": Object {
      "Properties": Object {
        "LoadBalancerAttributes": Array [
          Object {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
        ],
        "Scheme": "internal",
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
              "GroupId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "InternalIngressSecurityGroupMobileappsrendering486B411A",
              "GroupId",
            ],
          },
        ],
        "Subnets": Object {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerMobileappsrenderingSecurityGroup86D57550": Object {
      "Properties": Object {
        "GroupDescription": "Automatically created Security Group for ELB MobileAppsRenderingLoadBalancerMobileappsrendering801C2FFB",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingGuHttpsEgressSecurityGroupMobileappsrenderingC4F35269304019F57E42": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingWazuhSecurityGroupB96243E130401C238DEC": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ParameterStoreReadMobileappsrenderingA4006661": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile/mobile-apps-rendering",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupMobileappsrendering29320E35": Object {
      "Properties": Object {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 3040,
        "Protocol": "HTTP",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TargetGroupAttributes": Array [
          Object {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          Object {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "WazuhSecurityGroup": Object {
      "Properties": Object {
        "GroupDescription": "Allow outbound traffic from wazuh agent to manager",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh event logging",
            "FromPort": 1514,
            "IpProtocol": "tcp",
            "ToPort": 1514,
          },
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh agent registration",
            "FromPort": 1515,
            "IpProtocol": "tcp",
            "ToPort": 1515,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingInternalIngressSecurityGroupMobileappsrenderingB407C3A23040A9B30033": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingLoadBalancerMobileappsrenderingSecurityGroupE0CCF718304012C66B0D": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "mobileTESTmobileappsrenderingAD91FF83": Object {
      "DependsOn": Array [
        "InstanceRoleMobileappsrenderingEC64402A",
      ],
      "Properties": Object {
        "LaunchTemplateData": Object {
          "IamInstanceProfile": Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "mobileTESTmobileappsrenderingProfileA8EFA7CB",
                "Arn",
              ],
            },
          },
          "ImageId": Object {
            "Ref": "AMIMobileappsrendering",
          },
          "InstanceType": "t4g.small",
          "MetadataOptions": Object {
            "HttpTokens": "required",
          },
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
                "GroupId",
              ],
            },
            Object {
              "Fn::GetAtt": Array [
                "WazuhSecurityGroup",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": Array [
            Object {
              "ResourceType": "instance",
              "Tags": Array [
                Object {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                Object {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                Object {
                  "Key": "Name",
                  "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
                },
                Object {
                  "Key": "Stack",
                  "Value": "mobile",
                },
                Object {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
            Object {
              "ResourceType": "volume",
              "Tags": Array [
                Object {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                Object {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                Object {
                  "Key": "Name",
                  "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
                },
                Object {
                  "Key": "Stack",
                  "Value": "mobile",
                },
                Object {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
          ],
          "UserData": Object {
            "Fn::Base64": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "#!/bin/bash -ev
groupadd mapi
useradd -r -m -s /usr/bin/nologin -g mapi mobile-apps-rendering

export App=mobile-apps-rendering
export Stack=mobile
export Stage=TEST
export NODE_ENV=production

aws s3 cp s3://",
                  Object {
                    "Ref": "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "/mobile/TEST/mobile-apps-rendering/mobile-apps-rendering.zip /tmp
mkdir -p /opt/mobile-apps-rendering
unzip /tmp/mobile-apps-rendering.zip -d /opt/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /opt/mobile-apps-rendering

mkdir -p /usr/share/mobile-apps-rendering/logs
chown -R mobile-apps-rendering:mapi /usr/share/mobile-apps-rendering
ln -s /usr/share/mobile-apps-rendering/logs /var/log/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /var/log/mobile-apps-rendering

export PM2_HOME=\\"/usr/share/mobile-apps-rendering\\"
export ASSETS_MANIFEST=\\"/opt/mobile-apps-rendering/manifest.json\\"

/usr/local/node/pm2 start --name mobile-apps-rendering --uid mobile-apps-rendering --gid mapi /opt/mobile-apps-rendering/server.js
/opt/aws-kinesis-agent/configure-aws-kinesis-agent ",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  " mobile-log-aggregation-TEST '/var/log/mobile-apps-rendering/*'
/usr/local/node/pm2 logrotate -u mobile-apps-rendering",
                ],
              ],
            },
          },
        },
        "TagSpecifications": Array [
          Object {
            "ResourceType": "launch-template",
            "Tags": Array [
              Object {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              Object {
                "Key": "gu:repo",
                "Value": "guardian/dotcom-rendering",
              },
              Object {
                "Key": "Name",
                "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
              },
              Object {
                "Key": "Stack",
                "Value": "mobile",
              },
              Object {
                "Key": "Stage",
                "Value": "TEST",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobileTESTmobileappsrenderingProfileA8EFA7CB": Object {
      "Properties": Object {
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;

exports[`The MobileAppsRenderingPreview stack matches the snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuEc2App",
      "GuCertificate",
      "GuInstanceRole",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuDistributionBucketParameter",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuWazuhAccess",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
      "GuSecurityGroup",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": Object {
    "LoadBalancerMobileappsrenderingDnsName": Object {
      "Description": "DNS entry for LoadBalancerMobileappsrendering",
      "Value": Object {
        "Fn::GetAtt": Array [
          "LoadBalancerMobileappsrenderingB8B00ACB",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": Object {
    "AMIMobileappsrendering": Object {
      "Description": "Amazon Machine Image ID for the app mobile-apps-rendering. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "DistributionBucketName": Object {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "LoggingStreamName": Object {
      "Default": "/account/services/logging.stream.name",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/account/services/artifact.bucket",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "VpcId": Object {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "mobileappsrenderingPrivateSubnets": Object {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "mobileappsrenderingPublicSubnets": Object {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": Object {
    "AutoScalingGroupMobileappsrenderingASG42891F00": Object {
      "Properties": Object {
        "HealthCheckGracePeriod": 120,
        "HealthCheckType": "ELB",
        "LaunchTemplate": Object {
          "LaunchTemplateId": Object {
            "Ref": "mobilepreviewTESTmobileappsrenderingFF204ED7",
          },
          "Version": Object {
            "Fn::GetAtt": Array [
              "mobilepreviewTESTmobileappsrenderingFF204ED7",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "2",
        "MinSize": "1",
        "Tags": Array [
          Object {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": Object {
              "Ref": "LoggingStreamName",
            },
          },
          Object {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
        ],
        "TargetGroupARNs": Array [
          Object {
            "Ref": "TargetGroupMobileappsrendering29320E35",
          },
        ],
        "VPCZoneIdentifier": Object {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "AutoScalingGroupMobileappsrenderingScalingPolicyCpuScalingPolicy25F424F1": Object {
      "Properties": Object {
        "AutoScalingGroupName": Object {
          "Ref": "AutoScalingGroupMobileappsrenderingASG42891F00",
        },
        "PolicyType": "TargetTrackingScaling",
        "TargetTrackingConfiguration": Object {
          "PredefinedMetricSpecification": Object {
            "PredefinedMetricType": "ASGAverageCPUUtilization",
          },
          "TargetValue": 10,
        },
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "CertificateMobileappsrendering85649D08": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "DomainName": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com",
        "DomainValidationOptions": Array [
          Object {
            "DomainName": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com",
            "HostedZoneId": "TEST-HOSTED-ZONE-ID",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Name",
            "Value": "MobileAppsRenderingPreview/CertificateMobileappsrendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "DescribeEC2PolicyFF5F9295": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": Object {
      "Properties": Object {
        "HostedZoneId": "TEST-HOSTED-ZONE-ID",
        "Name": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com.",
        "ResourceRecords": Array [
          Object {
            "Fn::GetAtt": Array [
              "LoadBalancerMobileappsrenderingB8B00ACB",
              "DNSName",
            ],
          },
        ],
        "TTL": "3600",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "GetDistributablePolicyMobileappsrendering8E649036": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:s3:::",
                    Object {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile-preview/TEST/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyMobileappsrendering8E649036",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetParametersByPath37B32C62": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetParametersByPath37B32C62",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupMobileappsrendering089F1660": Object {
      "Properties": Object {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingPreviewInternalIngressSecurityGroupMobileappsrendering981D8A7F30401C964232": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingPreviewLoadBalancerMobileappsrenderingSecurityGroupA08E152F304032151D11": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:kinesis:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    Object {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleMobileappsrenderingEC64402A": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Path": "/",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InternalIngressSecurityGroupMobileappsrendering486B411A": Object {
      "Properties": Object {
        "GroupDescription": "Allow restricted ingress from CIDR ranges",
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": "10.0.0.0/8",
            "Description": "Allow access on port 443 from 10.0.0.0/8",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingPreviewGuHttpsEgressSecurityGroupMobileappsrendering86AAA55B30406414828D": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingPreviewWazuhSecurityGroupBFDBFD7E3040AC7A9AEE": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ListenerMobileappsrendering47F84352": Object {
      "Properties": Object {
        "Certificates": Array [
          Object {
            "CertificateArn": Object {
              "Ref": "CertificateMobileappsrendering85649D08",
            },
          },
        ],
        "DefaultActions": Array [
          Object {
            "TargetGroupArn": Object {
              "Ref": "TargetGroupMobileappsrendering29320E35",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": Object {
          "Ref": "LoadBalancerMobileappsrenderingB8B00ACB",
        },
        "Port": 443,
        "Protocol": "HTTPS",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerMobileappsrenderingB8B00ACB": Object {
      "Properties": Object {
        "LoadBalancerAttributes": Array [
          Object {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
        ],
        "Scheme": "internal",
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
              "GroupId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "InternalIngressSecurityGroupMobileappsrendering486B411A",
              "GroupId",
            ],
          },
        ],
        "Subnets": Object {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerMobileappsrenderingSecurityGroup86D57550": Object {
      "Properties": Object {
        "GroupDescription": "Automatically created Security Group for ELB MobileAppsRenderingPreviewLoadBalancerMobileappsrenderingA476639F",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingPreviewGuHttpsEgressSecurityGroupMobileappsrendering86AAA55B3040C6508311": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingPreviewWazuhSecurityGroupBFDBFD7E304032ED6346": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ParameterStoreReadMobileappsrenderingA4006661": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile-preview/mobile-apps-rendering",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile-preview/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupMobileappsrendering29320E35": Object {
      "Properties": Object {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 3040,
        "Protocol": "HTTP",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TargetGroupAttributes": Array [
          Object {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          Object {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "WazuhSecurityGroup": Object {
      "Properties": Object {
        "GroupDescription": "Allow outbound traffic from wazuh agent to manager",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh event logging",
            "FromPort": 1514,
            "IpProtocol": "tcp",
            "ToPort": 1514,
          },
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh agent registration",
            "FromPort": 1515,
            "IpProtocol": "tcp",
            "ToPort": 1515,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          Object {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": Object {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingPreviewInternalIngressSecurityGroupMobileappsrendering981D8A7F30409D4BEBFF": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingPreviewLoadBalancerMobileappsrenderingSecurityGroupA08E152F3040CC90354B": Object {
      "Properties": Object {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "mobilepreviewTESTmobileappsrenderingFF204ED7": Object {
      "DependsOn": Array [
        "InstanceRoleMobileappsrenderingEC64402A",
      ],
      "Properties": Object {
        "LaunchTemplateData": Object {
          "IamInstanceProfile": Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "mobilepreviewTESTmobileappsrenderingProfile72DADF5F",
                "Arn",
              ],
            },
          },
          "ImageId": Object {
            "Ref": "AMIMobileappsrendering",
          },
          "InstanceType": "t4g.micro",
          "MetadataOptions": Object {
            "HttpTokens": "required",
          },
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
                "GroupId",
              ],
            },
            Object {
              "Fn::GetAtt": Array [
                "WazuhSecurityGroup",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": Array [
            Object {
              "ResourceType": "instance",
              "Tags": Array [
                Object {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                Object {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                Object {
                  "Key": "Name",
                  "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
                },
                Object {
                  "Key": "Stack",
                  "Value": "mobile-preview",
                },
                Object {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
            Object {
              "ResourceType": "volume",
              "Tags": Array [
                Object {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                Object {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                Object {
                  "Key": "Name",
                  "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
                },
                Object {
                  "Key": "Stack",
                  "Value": "mobile-preview",
                },
                Object {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
          ],
          "UserData": Object {
            "Fn::Base64": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "#!/bin/bash -ev
groupadd mapi
useradd -r -m -s /usr/bin/nologin -g mapi mobile-apps-rendering

export App=mobile-apps-rendering
export Stack=mobile-preview
export Stage=TEST
export NODE_ENV=production

aws s3 cp s3://",
                  Object {
                    "Ref": "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "/mobile-preview/TEST/mobile-apps-rendering/mobile-apps-rendering.zip /tmp
mkdir -p /opt/mobile-apps-rendering
unzip /tmp/mobile-apps-rendering.zip -d /opt/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /opt/mobile-apps-rendering

mkdir -p /usr/share/mobile-apps-rendering/logs
chown -R mobile-apps-rendering:mapi /usr/share/mobile-apps-rendering
ln -s /usr/share/mobile-apps-rendering/logs /var/log/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /var/log/mobile-apps-rendering

export PM2_HOME=\\"/usr/share/mobile-apps-rendering\\"
export ASSETS_MANIFEST=\\"/opt/mobile-apps-rendering/manifest.json\\"

/usr/local/node/pm2 start --name mobile-apps-rendering --uid mobile-apps-rendering --gid mapi /opt/mobile-apps-rendering/server.js
/opt/aws-kinesis-agent/configure-aws-kinesis-agent ",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  " mobile-log-aggregation-TEST '/var/log/mobile-apps-rendering/*'
/usr/local/node/pm2 logrotate -u mobile-apps-rendering",
                ],
              ],
            },
          },
        },
        "TagSpecifications": Array [
          Object {
            "ResourceType": "launch-template",
            "Tags": Array [
              Object {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              Object {
                "Key": "gu:repo",
                "Value": "guardian/dotcom-rendering",
              },
              Object {
                "Key": "Name",
                "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
              },
              Object {
                "Key": "Stack",
                "Value": "mobile-preview",
              },
              Object {
                "Key": "Stage",
                "Value": "TEST",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobilepreviewTESTmobileappsrenderingProfile72DADF5F": Object {
      "Properties": Object {
        "Roles": Array [
          Object {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;
